# homework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: .gitignore  CMakeLists.txt
client/cmake/: cppcheck.cmake
client/includes/: AppSettings.h  DataPool.h  Menu.h  NetWork.h  SocketClient.h  Tests.h
client/sources/: AppSettings.cpp  DataPool.cpp  Menu.cpp  NetWork.cpp  SocketClient.cpp  Tests.cpp  main.cpp
client/tests/: AppSettingsTest.cpp  CMakeLists.txt  CheckAppTest.cpp  DataPoolTets.cpp  FunctionTest.cpp  test_input.cpp
commonFunc/includes/: PacketFunction.h  ResultStatus.h  StandardPackets.h  StringFunction.h  ValidationFunction.h  VectorProcess.h  functions.h
commonFunc/sources/: PacketFunction.cpp  ResultStatus.cpp  StringFunction.cpp  ValidationFunction.cpp  VectorProcess.cpp  functions.cpp
includes/: AppSettings.h  DataPool.h  Menu.h  NetWork.h  Tests.h  functions.h
server/: .gitignore  CMakeLists.txt
server/includes/: ConfigApp.h  EpollServer.h  ManageServer.h  MathFunc.h  SocketServer.h  ThreadPool.h
server/sources/: ConfigApp.cpp  EpollServer.cpp  ManageServer.cpp  MathFunc.cpp  SocketServer.cpp  ThreadPool.cpp  main.cpp
server/tests/: CMakeLists.txt  configAppTest.cpp  epollTest.cpp  mathFuncTest.cpp  socketTest.cpp  test_input.cpp
sources/: AppSettings.cpp  DataPool.cpp  Menu.cpp  NetWork.cpp  Tests.cpp  functions.cpp  main.cpp
tests/: CMakeLists.txt  test_input.cpp
